<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter">Enter</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="do_you_have_account">Do you have account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coffee">Coffee</string>
    <string name="bakery">Bakery</string>
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="management">Manage</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="do_you_want_to_logout">Do you want to logout ?</string>
    <string name="name">Name</string>
    <string name="_1">1</string>
    <string name="_180">180</string>
    <string name="ki_m_tra_k_t_n_i_m_ng">Kiểm tra kết nối mạng</string>
    <string name="checkpassword"><![CDATA[[!@#$%^&*(),.?\":{}|<>]]]></string>
    <string name="CheckEmail">^[\\w-]+(\\.[\\w-]+)*@[\\w-]+(\\.[\\w-]+)*(\\.[a-zA-Z]{2,})$</string>
    <string name="type">Type</string>
    <string name="id">ID</string>
    <string name="quality">Quality</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="Shop_Close">Cửa hàng chưa mở cửa</string>
</resources>