<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background"
        android:padding="@dimen/_10sdp"
        tools:context=".Start.RegisterActivity">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/logo_coffee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>


        <TextView
            android:id="@+id/Txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_up"
            android:textColor="@color/Event_input"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Logo" />

        <TextView
            android:id="@id/Txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/create_a_new_account"
            android:textColor="@color/Event_input"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Txt1" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Txt2"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/Event_input"
            android:textColorHint="@color/Start_input"
            android:autofillHints="emailAddress"
            />

        <EditText
            android:id="@+id/Password"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/Event_input"
            android:textColorHint="@color/Start_input"
            android:autofillHints="password"/>
        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/Event_input"
            android:textColorHint="@color/Start_input"
            android:autofillHints="password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnRegister"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/custom_button"
            android:text="@string/enter"
            android:textColor="@color/Event_input"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_account"
                android:textColor="@color/Start_input"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/TxtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@string/sign_in"
                android:textColor="@color/Event_input"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>