<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_white_corner_16">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@color/Event_input"
        android:text="@string/app_name"
        android:textStyle="italic"
        android:padding="14dp"
        android:fontFamily="@font/alfa_slab_one"
        android:textColor="@color/black"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_logout"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_3sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/No"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_corner_16"
            android:text="No" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Yes"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Yes"
            android:layout_weight="1"
            android:background="@drawable/bg_event_corner_16"
            />
    </LinearLayout>


        
</LinearLayout>