<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background"
        tools:context=".MainActivity">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="780dp"
            />

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:weightSum="3"
            android:baselineAligned="false">
            <LinearLayout
                android:id="@+id/HomeLayout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/custom_navigation_bottom"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
                <ImageView
                    android:id="@+id/HomeImage"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/home_icon_selected"
                    android:contentDescription="@string/home"/>
                <TextView
                    android:id="@+id/HomeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/home"
                    android:textColor="@color/Event_input"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ManageLauout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/Background"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
                <ImageView
                    android:id="@+id/ManaImage"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/baseline_store_24"
                    android:contentDescription="@string/management"/>
                <TextView
                    android:id="@+id/ManaTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/management"
                    android:textColor="@color/Event_input"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LogoutLayout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/Background"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <ImageView
                    android:id="@+id/LoImage"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/baseline_logout_24"
                    android:contentDescription="@string/management"/>

                <TextView
                    android:id="@+id/LogTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/log_out"
                    android:textColor="@color/Event_input"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>